--- a/PortylLauncher/PortylLauncher.vcxproj
+++ b/PortylLauncher/PortylLauncher.vcxproj
@@ -72,9 +72,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)PortylLauncher\src\Launcher;$(SolutionDir)PortylLauncher\src;$(SolutionDir)Portyl\src;$(SolutionDir)extern\inc\ImGui;$(SolutionDir)extern\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)$(IntDir)Portyl.lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)PortylLauncher\src\Launcher;$(SolutionDir)PortylLauncher\src;$(SolutionDir)Portyl\src;$(SolutionDir)extern\inc;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)PortylLauncher\src\Launcher;$(SolutionDir)PortylLauncher\src;$(SolutionDir)Portyl\src;$(SolutionDir)extern\inc\ImGui;$(SolutionDir)extern\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)$(IntDir)Portyl.lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
