--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -1,16 +1,303 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=230,269
 Size=192,205
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=868,110
-Size=550,680
+Pos=0,42
+Size=405,858
+Collapsed=0
+DockId=0x00000005,0
 
 [Window][Test]
-Pos=395,273
-Size=233,48
+Pos=1286,42
+Size=314,858
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Another Window]
+Pos=1286,42
+Size=314,858
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Third Window]
+Pos=1286,42
+Size=314,858
+Collapsed=0
+DockId=0x00000003,2
+
+[Window][Dear ImGui Style Editor]
+Pos=23,47
+Size=707,782
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=635,347
+Size=417,184
+Collapsed=0
+
+[Window][Delete?]
+Pos=640,395
+Size=319,109
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=536,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Stacked 2]
+Pos=698,424
+Size=234,75
+Collapsed=0
+
+[Window][Example: Console]
+Pos=407,629
+Size=877,271
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Example: Custom rendering]
+Pos=407,42
+Size=877,585
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Example: Auto-resizing window]
+Pos=85,120
+Size=459,305
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=500,281
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=75,172
+Size=520,600
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=23,513
+Size=459,63
+Collapsed=1
+
+[Window][###AnimatedTitle]
+Pos=33,349
+Size=255,50
+Collapsed=1
+
+[Window][Same title as another window##2]
+Pos=24,431
+Size=459,63
+Collapsed=1
+
+[Window][Example: Simple layout]
+Pos=81,178
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,382
+
+[Window][Example: Property editor]
+Pos=57,143
+Size=430,450
+Collapsed=0
+
+[Window][Example: Log]
+Pos=71,257
+Size=500,400
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=69,73
+Size=633,705
+Collapsed=0
+
+[Window][Lettuce]
+Pos=81,177
+Size=609,593
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Eggplant]
+Pos=81,177
+Size=609,593
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Carrot]
+Pos=81,177
+Size=609,593
+Collapsed=0
+DockId=0xA086D808,2
+
+[Window][A Rather Long Title]
+Pos=81,177
+Size=609,593
+Collapsed=0
+DockId=0xA086D808,3
+
+[Window][DockSpace Demo]
+Pos=0,21
+Size=1600,879
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=284,320
+Size=133,156
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x0919F5A2,14]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=21
+Column 2  Width=21
+Column 3  Width=21
+Column 4  Width=21
+Column 5  Width=21
+Column 6  Width=21
+Column 7  Width=21
+Column 8  Width=21
+Column 9  Width=21
+Column 10 Width=21
+Column 11 Width=21
+Column 12 Width=21
+Column 13 Width=21
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=88
+Column 1  Width=88
+Column 2  Width=88
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xC179E37C,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=79
+Column 3  Width=70
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0xD181190E,2]
+Column 0  Weight=0.8451
+Column 1  Weight=1.1549
+
+[Docking][Data]
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1600,858 Split=X
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1284,879 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=405,879 Selected=0xE87781F4
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=877,879 Split=Y
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=1025,271 Selected=0xDE6E0C33
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=314,879 Selected=0x44A6A033
+DockSpace       ID=0xA086D808 Window=0x1FD64BEB Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
