--- a/FlexLauncher/imgui.ini
+++ b/FlexLauncher/imgui.ini
@@ -1,12 +1,15 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=230,269
 Size=192,205
+Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=868,110
 Size=550,680
+Collapsed=0
 
