enabled viewport and docking, added dockspace
- enabled viewport and docking
- rough implementation of dockspace

--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=312,78
 Size=400,400
-Collapsed=0
+Collapsed=1
 
 [Window][Hello, world!]
 Pos=230,269
@@ -9,28 +9,26 @@ Size=192,205
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,42
-Size=405,858
+Pos=246,117
+Size=457,655
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Test]
-Pos=1286,42
-Size=314,858
+Pos=545,195
+Size=410,445
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Another Window]
 Pos=1286,42
 Size=314,858
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x3BC79352,1
 
 [Window][Third Window]
 Pos=1286,42
 Size=314,858
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x3BC79352,2
 
 [Window][Dear ImGui Style Editor]
 Pos=23,47
@@ -49,7 +47,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
-Size=536,136
+Size=250,136
 
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
@@ -151,14 +149,34 @@ Collapsed=0
 DockId=0xA086D808,3
 
 [Window][DockSpace Demo]
-Pos=0,21
-Size=1600,879
+Size=1600,900
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
 Pos=284,320
 Size=133,156
 Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1600,900
+Collapsed=0
+
+[Window][DockSpace]
+Size=1600,900
+Collapsed=0
+
+[Window][Left]
+Pos=435,134
+Size=284,234
+Collapsed=0
+DockId=0x00000001
+
+[Window][Down]
+Pos=355,426
+Size=250,247
+Collapsed=0
+DockId=0x00000005
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -292,12 +310,13 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1600,858 Split=X
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1284,879 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=405,879 Selected=0xE87781F4
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=877,879 Split=Y
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=1025,271 Selected=0xDE6E0C33
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=314,879 Selected=0x44A6A033
-DockSpace       ID=0xA086D808 Window=0x1FD64BEB Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace     ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace     ID=0x8B93E3BD Pos=0,0 Size=1600,900 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=319,900
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1279,900 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1279,673 CentralNode=1
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1279,225
+DockSpace     ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
