--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=312,78
+Pos=312,211
 Size=400,400
 Collapsed=1
 
@@ -9,9 +9,10 @@ Size=192,205
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=246,117
-Size=457,655
+Pos=1262,21
+Size=338,879
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Test]
 Pos=545,195
@@ -31,9 +32,10 @@ Collapsed=0
 DockId=0x3BC79352,2
 
 [Window][Dear ImGui Style Editor]
-Pos=23,47
-Size=707,782
+Pos=0,21
+Size=658,879
 Collapsed=0
+DockId=0x00000001,1
 
 [Window][Stacked 1]
 Pos=635,347
@@ -158,8 +160,8 @@ Size=133,156
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1600,900
+Pos=0,21
+Size=1600,879
 Collapsed=0
 
 [Window][DockSpace]
@@ -167,16 +169,26 @@ Size=1600,900
 Collapsed=0
 
 [Window][Left]
-Pos=435,134
-Size=284,234
+Size=319,900
 Collapsed=0
-DockId=0x00000001
 
 [Window][Down]
-Pos=355,426
-Size=250,247
+Pos=419,675
+Size=841,225
 Collapsed=0
-DockId=0x00000005
+DockId=0x00000005,0
+
+[Window][Viewport]
+Pos=419,21
+Size=841,652
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Content Browser]
+Pos=0,21
+Size=417,879
+Collapsed=0
+DockId=0x00000001,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -310,13 +322,15 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace     ID=0x8B93E3BD Pos=0,0 Size=1600,900 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=319,900
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1279,900 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1279,673 CentralNode=1
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1279,225
-DockSpace     ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=71,162 Size=1600,879 Split=X
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1260,879 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=417,900 Selected=0xBF096F38
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=841,900 Split=Y
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1039,673 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1039,225 Selected=0x2DAC0363
+  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=338,879 Selected=0xE87781F4
+DockSpace       ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
