--- a/FlexCode/imgui.ini
+++ b/FlexCode/imgui.ini
@@ -182,7 +182,7 @@ DockId=0x00000005,0
 Pos=419,21
 Size=841,652
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000C,0
 
 [Window][Content Browser]
 Pos=0,21
@@ -194,13 +194,25 @@ DockId=0x00000001,0
 Pos=419,21
 Size=1181,879
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000C,0
 
 [Window][README.md]
 Pos=419,21
-Size=1181,879
+Size=591,434
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
+
+[Window][layer_code.cpp]
+Pos=1012,21
+Size=588,879
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][main.cpp]
+Pos=419,457
+Size=591,443
+Collapsed=0
+DockId=0x0000000C,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -334,15 +346,19 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,91 Size=1600,879 Split=X
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1260,879 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=417,900 Selected=0xBF096F38
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=841,900 Split=Y
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1039,673 CentralNode=1 Selected=0xEF8D1AF8
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1039,225 Selected=0x2DAC0363
-  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=338,879 Selected=0xE87781F4
-DockSpace       ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace           ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=71,162 Size=1600,879 Split=X
+  DockNode          ID=0x00000006 Parent=0x8B93E3BD SizeRef=1260,879 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000006 SizeRef=417,900 Selected=0xBF096F38
+    DockNode        ID=0x00000002 Parent=0x00000006 SizeRef=841,900 Split=Y
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1039,673 Split=X Selected=0xE9F184AB
+        DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=591,879 Split=Y Selected=0xE9F184AB
+          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=591,434 Selected=0xEF8D1AF8
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=591,443 CentralNode=1 Selected=0xE9F184AB
+        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=588,879 Selected=0x60FD9EE8
+      DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1039,225 Selected=0x2DAC0363
+  DockNode          ID=0x00000008 Parent=0x8B93E3BD SizeRef=338,879 Selected=0xE87781F4
+DockSpace           ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
