WIP added support for closing windows

--- a/FlexCode/imgui.ini
+++ b/FlexCode/imgui.ini
@@ -198,7 +198,7 @@ DockId=0x0000000C,0
 
 [Window][README.md]
 Pos=419,21
-Size=591,434
+Size=1181,434
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -211,6 +211,12 @@ DockId=0x0000000A,0
 [Window][main.cpp]
 Pos=419,21
 Size=591,879
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][imgui.ini]
+Pos=419,457
+Size=1181,443
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -349,14 +355,14 @@ Column 1  Weight=1.1549
 DockSpace           ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
   DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
   DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,156 Size=1600,879 Split=X
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=71,162 Size=1600,879 Split=X
   DockNode          ID=0x00000006 Parent=0x8B93E3BD SizeRef=1260,879 Split=X
     DockNode        ID=0x00000001 Parent=0x00000006 SizeRef=417,900 Selected=0xBF096F38
     DockNode        ID=0x00000002 Parent=0x00000006 SizeRef=841,900 Split=Y
       DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1039,673 Split=X Selected=0xE9F184AB
         DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=591,879 Split=Y Selected=0xE9F184AB
           DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=591,434 Selected=0xEF8D1AF8
-          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=591,443 CentralNode=1 Selected=0xE9F184AB
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=591,443 CentralNode=1 Selected=0x552CDB4A
         DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=588,879 Selected=0x60FD9EE8
       DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1039,225 Selected=0x2DAC0363
   DockNode          ID=0x00000008 Parent=0x8B93E3BD SizeRef=338,879 Selected=0xE87781F4
