implemented input and logging system + various other tweaks
- included RapidJSON 1.1.0
- implemented input system
- updated application quit keybind from escape to ctrl+q
- added timer
- added playerprefs
- added flexlogger
- created file handler for flexlogger
- expanded shaders into a cpp file
- added flow logging
- updated pch
- removed abort() in place of Log::Fatal to attempt to allow the application to free memory (if it crashes anyways, too bad)
- FATAL ERROR HANDLING IS UNTESTED

--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -43,6 +43,21 @@
     <ClCompile Include="..\third_party\src\glad\glad.c">
       <Filter>third_party\glad</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\playerprefs.cpp">
+      <Filter>src\FlexEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\input.cpp">
+      <Filter>src\FlexEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\flexlogger.cpp">
+      <Filter>src\FlexEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\Loader\files.cpp">
+      <Filter>src\FlexEngine\Loader</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\Loader\shaders.cpp">
+      <Filter>src\FlexEngine\Loader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -73,6 +88,21 @@
       <Filter>src\FlexEngine\Loader</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Loader\gltf.h">
+      <Filter>src\FlexEngine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\playerprefs.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\timer.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\input.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\flexlogger.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\Loader\files.h">
       <Filter>src\FlexEngine\Loader</Filter>
     </ClInclude>
   </ItemGroup>
