--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClCompile Include="src\FlexEngine\Loader\textures.cpp">
       <Filter>src\FlexEngine\Loader</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\freequeue.cpp">
+      <Filter>src\FlexEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\functionqueue.cpp">
+      <Filter>src\FlexEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -110,6 +116,15 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Loader\textures.h">
       <Filter>src\FlexEngine\Loader</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\freequeue.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\functionqueue.h">
+      <Filter>src\FlexEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\flexassert.h">
+      <Filter>src\FlexEngine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
