--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -12,7 +12,6 @@ Collapsed=0
 Pos=900,29
 Size=380,691
 Collapsed=0
-DockId=0x00000008,0
 
 [Window][Test]
 Pos=545,195
@@ -35,7 +34,7 @@ DockId=0x3BC79352,2
 Pos=0,21
 Size=658,879
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x8B93E3BD,1
 
 [Window][Stacked 1]
 Pos=635,347
@@ -176,19 +175,17 @@ Collapsed=0
 Pos=316,495
 Size=582,225
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=316,29
+Pos=316,28
 Size=582,464
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Content Browser]
-Pos=0,29
+ViewportPos=113,165
+ViewportId=0x371352B7
 Size=314,691
 Collapsed=0
-DockId=0x00000001,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -322,15 +319,9 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=34,86 Size=1280,691 Split=X
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1218,879 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=314,900 Selected=0xBF096F38
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=902,900 Split=Y
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1039,673 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1039,225 Selected=0x2DAC0363
-  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=380,879 Selected=0xE87781F4
-DockSpace       ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace   ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode  ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace   ID=0x8B93E3BD Pos=216,268 Size=1280,691 CentralNode=1
+DockSpace   ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
